--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
     <section class="intro">
         <h2>Добро пожаловать</h2>
-        <p>Музыка, растекающаяся по времени и реальностям.</p>
+        <p>Тут был Корней.</p>
     </section>
 </body>
 </html>
+
