--- a/albums.html
+++ b/albums.html
@@ -22,11 +22,11 @@
             <!-- Пример одного альбома -->
             <div class="album-card">
                 <img src="albums/album1.jpg" alt="Название альбома">
-                <h3>Название альбома 1</h3>
+                <h3>Как будто ты в фонтан упал</h3>
                 <p>2025</p>
                 <div class="links">
                     <a href="#" target="_blank">Spotify</a>
-                    <a href="#" target="_blank">YouTube</a>
+                    <a href="#" target="https://www.youtube.com/playlist?list=OLAK5uy_luKjn0cJBQwo35yeWvqSwkX3QRzWiSJBs">YouTube</a>
                     <a href="#" target="_blank">Apple Music</a>
                 </div>
             </div>
@@ -34,7 +34,7 @@
             <div class="album-card">
                 <img src="albums/album2.jpg" alt="Название альбома">
                 <h3>Название альбома 2</h3>
-                <p>2024</p>
+                <p>?</p>
                 <div class="links">
                     <a href="#" target="_blank">Spotify</a>
                     <a href="#" target="_blank">YouTube</a>
@@ -47,3 +47,4 @@
     </main>
 </body>
 </html>
+
