--- a/albums.html
+++ b/albums.html
@@ -16,35 +16,100 @@
     </header>
 
     <main class="albums-page">
-        <h2 style="text-align:center; margin:40px 0;">Альбомы</h2>
+    <h2 style="text-align:center; margin:40px 0;">Альбомы</h2>
 
-        <div class="albums-grid">
-            <!-- Пример одного альбома -->
-            <div class="album-card">
-                <img src="albums/album1.jpg" alt="Название альбома">
-                <h3>Как будто ты в фонтан упал</h3>
-                <p>2025</p>
-                <div class="links">
-                    <a href="#" target="_blank">Spotify</a>
-                    <a href="#" target="https://www.youtube.com/playlist?list=OLAK5uy_luKjn0cJBQwo35yeWvqSwkX3QRzWiSJBs">YouTube</a>
-                    <a href="#" target="_blank">Apple Music</a>
+    <div class="albums-grid">
+        <!-- Альбом 1 -->
+        <div class="album-card">
+            <img src="albums/album1.jpg" alt="Альбом 1">
+            <h3>Как будто ты в фонтан упал</h3>
+            <p>2025</p>
+
+            <div class="album-tracks">
+                <div class="track">
+                    <h4>Труп</h4>
+                    <audio controls src="music/track1.mp3"></audio>
+                </div>
+                <div class="track">
+                    <h4>Одна</h4>
+                    <audio controls src="music/track2.mp3"></audio>
+                </div>
+                <div class="track">
+                    <h4>Первый признак</h4>
+                    <audio controls src="music/track3.mp3"></audio>
+                </div>
+                <div class="track">
+                    <h4>Над нами</h4>
+                    <audio controls src="music/track4.mp3"></audio>
+                </div>
+                <div class="track">
+                    <h4>Песня гастронома</h4>
+                    <audio controls src="music/track5.mp3"></audio>
+                </div>
+                <div class="track">
+                    <h4>Лицо</h4>
+                    <audio controls src="music/track6.mp3"></audio>
+                </div>
+                <div class="track">
+                    <h4>Сколько раз</h4>
+                    <audio controls src="music/track7.mp3"></audio>
+                </div>
+                <div class="track">
+                    <h4>Тише</h4>
+                    <audio controls src="music/track8.mp3"></audio>
+                </div>
+                <div class="track">
+                    <h4>Они видят во мне врага</h4>
+                    <audio controls src="music/track9.mp3"></audio>
+                </div>
+                <div class="track">
+                    <h4>Домой</h4>
+                    <audio controls src="music/track10.mp3"></audio>
+                </div>
+                <div class="track">
+                    <h4>Второй признак</h4>
+                    <audio controls src="music/track11.mp3"></audio>
+                </div>
+                <div class="track">
+                    <h4>Амнезия</h4>
+                    <audio controls src="music/track12.mp3"></audio>
+                </div>
+                <div class="track">
+                    <h4>Пурт</h4>
+                    <audio controls src="music/track13.mp3"></audio>
                 </div>
             </div>
 
-            <div class="album-card">
-                <img src="albums/album2.jpg" alt="Название альбома">
-                <h3>Название альбома 2</h3>
-                <p>?</p>
-                <div class="links">
-                    <a href="#" target="_blank">Spotify</a>
-                    <a href="#" target="_blank">YouTube</a>
-                    <a href="#" target="_blank">Apple Music</a>
-                </div>
+            <div class="links">
+                <a href="#" target="_blank">Spotify</a>
+                <a href="#" target="https://www.youtube.com/playlist?list=OLAK5uy_luKjn0cJBQwo35yeWvqSwkX3QRzWiSJBs">YouTube</a>
+                <a href="#" target="_blank">Apple Music</a>
             </div>
-
-            <!-- Добавляй новые альбомы по шаблону -->
         </div>
-    </main>
-</body>
-</html>
+
+        <!-- Альбом 2 -->
+        <div class="album-card">
+            <img src="albums/album2.jpg" alt="Альбом 2">
+            <h3>Альбом?</h3>
+            <p>?</p>
+
+            <div class="album-tracks">
+                <div class="track">
+                    <h4>Трек 1</h4>
+                    <audio controls src="music/track3.mp3"></audio>
+                </div>
+                <div class="track">
+                    <h4>Трек 2</h4>
+                    <audio controls src="music/track4.mp3"></audio>
+                </div>
+            </div>
+
+            <div class="links">
+                <a href="#" target="_blank">Spotify</a>
+                <a href="#" target="_blank">YouTube</a>
+                <a href="#" target="_blank">Apple Music</a>
+            </div>
+        </div>
+    </div>
+</main>
 
