--- a/albums.html
+++ b/albums.html
@@ -111,5 +111,8 @@
             </div>
         </div>
     </div>
-</main>
+    </main>
 
+    <canvas id="particle-canvas"></canvas>
+</body>
+</html>
