--- a/albums.html
+++ b/albums.html
@@ -28,55 +28,55 @@
             <div class="album-tracks">
                 <div class="track">
                     <h4>Труп</h4>
-                    <audio controls src="music/track1.mp3"></audio>
+                    <audio class="track-audio" controls src="music/track1.mp3"></audio>
                 </div>
                 <div class="track">
                     <h4>Одна</h4>
-                    <audio controls src="music/track2.mp3"></audio>
+                    <audio class="track-audio" controls src="music/track2.mp3"></audio>
                 </div>
                 <div class="track">
                     <h4>Первый признак</h4>
-                    <audio controls src="music/track3.mp3"></audio>
+                    <audio class="track-audio" controls src="music/track3.mp3"></audio>
                 </div>
                 <div class="track">
                     <h4>Над нами</h4>
-                    <audio controls src="music/track4.mp3"></audio>
+                    <audio class="track-audio" controls src="music/track4.mp3"></audio>
                 </div>
                 <div class="track">
                     <h4>Песня гастронома</h4>
-                    <audio controls src="music/track5.mp3"></audio>
+                    <audio class="track-audio" controls src="music/track5.mp3"></audio>
                 </div>
                 <div class="track">
                     <h4>Лицо</h4>
-                    <audio controls src="music/track6.mp3"></audio>
+                    <audio class="track-audio" controls src="music/track6.mp3"></audio>
                 </div>
                 <div class="track">
                     <h4>Сколько раз</h4>
-                    <audio controls src="music/track7.mp3"></audio>
+                    <audio class="track-audio" controls src="music/track7.mp3"></audio>
                 </div>
                 <div class="track">
                     <h4>Тише</h4>
-                    <audio controls src="music/track8.mp3"></audio>
+                    <audio class="track-audio" controls src="music/track8.mp3"></audio>
                 </div>
                 <div class="track">
                     <h4>Они видят во мне врага</h4>
-                    <audio controls src="music/track9.mp3"></audio>
+                    <audio class="track-audio" controls src="music/track9.mp3"></audio>
                 </div>
                 <div class="track">
                     <h4>Домой</h4>
-                    <audio controls src="music/track10.mp3"></audio>
+                    <audio class="track-audio" controls src="music/track10.mp3"></audio>
                 </div>
                 <div class="track">
                     <h4>Второй признак</h4>
-                    <audio controls src="music/track11.mp3"></audio>
+                    <audio class="track-audio" controls src="music/track11.mp3"></audio>
                 </div>
                 <div class="track">
                     <h4>Амнезия</h4>
-                    <audio controls src="music/track12.mp3"></audio>
+                    <audio class="track-audio" controls src="music/track12.mp3"></audio>
                 </div>
                 <div class="track">
                     <h4>Пурт</h4>
-                    <audio controls src="music/track13.mp3"></audio>
+                    <audio class="track-audio" controls src="music/track13.mp3"></audio>
                 </div>
             </div>
 
@@ -96,11 +96,11 @@
             <div class="album-tracks">
                 <div class="track">
                     <h4>Трек 1</h4>
-                    <audio controls src="music/track3.mp3"></audio>
+                    <audio class="track-audio" controls src="music/track0.mp3"></audio>
                 </div>
                 <div class="track">
                     <h4>Трек 2</h4>
-                    <audio controls src="music/track4.mp3"></audio>
+                    <audio class="track-audio" controls src="music/track0.mp3"></audio>
                 </div>
             </div>
 
@@ -160,4 +160,5 @@ animate();
 
 </body>
 </html>
+
 
