--- a/albums.html
+++ b/albums.html
@@ -158,7 +158,87 @@ function animate() {
 animate();
 </script>
 
+<script>
+const canvas = document.getElementById('particle-canvas');
+const ctx = canvas.getContext('2d');
+let width = canvas.width = window.innerWidth;
+let height = canvas.height = window.innerHeight;
+
+window.addEventListener('resize', () => {
+    width = canvas.width = window.innerWidth;
+    height = canvas.height = window.innerHeight;
+});
+
+const particles = [];
+const colors = ['#ff00ff', '#ff66ff', '#66ffff', '#00ffff'];
+for (let i = 0; i < 120; i++) {
+    particles.push({
+        x: Math.random() * width,
+        y: Math.random() * height,
+        r: Math.random() * 3 + 1,
+        dx: (Math.random() - 0.5) * 0.8,
+        dy: (Math.random() - 0.5) * 0.8,
+        color: colors[Math.floor(Math.random() * colors.length)]
+    });
+}
+
+// Подключаем аудио
+const audioElements = document.querySelectorAll('.track-audio');
+const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+const analysers = [];
+
+audioElements.forEach(audioEl => {
+    const source = audioCtx.createMediaElementSource(audioEl);
+    const analyser = audioCtx.createAnalyser();
+    analyser.fftSize = 256;
+    source.connect(analyser);
+    analyser.connect(audioCtx.destination);
+    analysers.push(analyser);
+});
+
+// Функция для получения уровня громкости
+function getAverageVolume(array) {
+    let values = 0;
+    let length = array.length;
+    for (let i = 0; i < length; i++) {
+        values += array[i];
+    }
+    return values / length;
+}
+
+function animate() {
+    ctx.clearRect(0, 0, width, height);
+
+    // Средняя громкость всех треков
+    let avgVol = 0;
+    analysers.forEach(analyser => {
+        const dataArray = new Uint8Array(analyser.frequencyBinCount);
+        analyser.getByteFrequencyData(dataArray);
+        avgVol += getAverageVolume(dataArray);
+    });
+    avgVol /= analysers.length || 1;
+
+    particles.forEach(p => {
+        // движение частиц зависит от громкости
+        p.x += p.dx * (1 + avgVol/50);
+        p.y += p.dy * (1 + avgVol/50);
+        if (p.x < 0 || p.x > width) p.dx *= -1;
+        if (p.y < 0 || p.y > height) p.dy *= -1;
+
+        ctx.beginPath();
+        ctx.arc(p.x, p.y, p.r + avgVol/100, 0, Math.PI*2);
+        ctx.fillStyle = p.color;
+        ctx.fill();
+    });
+
+    requestAnimationFrame(animate);
+}
+
+animate();
+</script>
+    
 </body>
 </html>
+
 
 
