--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <div class="home-buttons">
             <a href="albums.html" class="btn">Альбомы</a>
-            <a href="https://music.apple.com/" target="_blank" class="btn">Стриминг</a>
+            <a href="https://music.yandex.ru/artist/23657063?ysclid=mi0vpvcksh522707614" target="_blank" class="btn">Стриминг</a>
             <a href="https://www.youtube.com/channel/UCTXIzl0ec7pBZzl8Ys2ceIQ" target="_blank" class="btn">YouTube</a>
         </div>
 
@@ -88,3 +88,4 @@
     </script>
 </body>
 </html>
+
