--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
         <!-- Мини-галерея альбомов -->
         <div class="mini-albums">
-            <img src="albums/album1.jpg" alt="Альбом 1">
-            <img src="albums/album2.jpg" alt="Альбом 2">
-            <img src="albums/album3.jpg" alt="Альбом 3">
+            <img src="images/album1.jpg" alt="Альбом 1">
+            <img src="images/album2.jpg" alt="Альбом 2">
+            <img src="images/album3.jpg" alt="Альбом 3">
         </div>
     </div>
 
@@ -88,4 +88,5 @@
     </script>
 </body>
 </html>
+
 
