--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Canvas для интерактивного психоделического фона -->
+    <!-- Canvas для интерактивного сюрреалистического фона -->
     <canvas id="bg-canvas"></canvas>
 
     <!-- Главный контент -->
@@ -28,7 +28,7 @@
     </div>
 
     <script>
-    // ---------------- Интерактивный фон ----------------
+    // ---------------- Интерактивный сюрреалистический фон ----------------
     const canvas = document.getElementById('bg-canvas');
     const ctx = canvas.getContext('2d');
     let width = canvas.width = window.innerWidth;
@@ -40,15 +40,34 @@
     });
 
     const particles = [];
-    for(let i=0;i<200;i++){
+    for(let i=0;i<250;i++){
         particles.push({
             x: Math.random()*width,
             y: Math.random()*height,
             r: Math.random()*3+1,
-            dx: (Math.random()-0.5)*2,
-            dy: (Math.random()-0.5)*2
+            dx: (Math.random()-0.5)*1.5,
+            dy: (Math.random()-0.5)*1.5
         });
     }
+
+    const artElements = [];
+    for(let i=0;i<10;i++){
+        artElements.push({
+            x: Math.random()*width,
+            y: Math.random()*height,
+            size: Math.random()*50+50,
+            opacity: Math.random()*0.3+0.1,
+            dx: (Math.random()-0.5)*0.5,
+            dy: (Math.random()-0.5)*0.5,
+            color: `hsla(${Math.random()*360}, 80%, 60%, 0.5)`
+        });
+    }
+
+    let mouse = {x: width/2, y: height/2};
+    window.addEventListener('mousemove', e => {
+        mouse.x = e.clientX;
+        mouse.y = e.clientY;
+    });
 
     function getRainbowColor(offset=0){
         const hue = (Date.now()/20 + offset) % 360;
@@ -56,12 +75,13 @@
     }
 
     function animate(){
-        ctx.fillStyle = "rgba(0,0,0,0.2)";
+        ctx.fillStyle = "rgba(0,0,0,0.15)";
         ctx.fillRect(0,0,width,height);
 
+        // Частицы
         particles.forEach((p,i)=>{
-            p.x += p.dx;
-            p.y += p.dy;
+            p.x += p.dx + (mouse.x-width/2)/1000;
+            p.y += p.dy + (mouse.y-height/2)/1000;
             if(p.x<0||p.x>width)p.dx*=-1;
             if(p.y<0||p.y>height)p.dy*=-1;
 
@@ -71,14 +91,40 @@
             ctx.fill();
         });
 
+        // Сюрреалистические элементы (нейро-арт)
+        artElements.forEach(a=>{
+            a.x += a.dx;
+            a.y += a.dy;
+            if(a.x<0||a.x>width)a.dx*=-1;
+            if(a.y<0||a.y>height)a.dy*=-1;
+
+            ctx.beginPath();
+            ctx.ellipse(a.x, a.y, a.size, a.size*0.6, Math.PI/4, 0, Math.PI*2);
+            ctx.fillStyle = a.color;
+            ctx.globalAlpha = a.opacity;
+            ctx.fill();
+            ctx.globalAlpha = 1;
+        });
+
         // Радужное свечение названия группы
         const title = document.querySelector('.band-title');
-        title.style.textShadow = `0 0 20px ${getRainbowColor(0)}, 0 0 40px ${getRainbowColor(50)}`;
+        title.style.textShadow = `
+            0 0 20px ${getRainbowColor(0)},
+            0 0 40px ${getRainbowColor(50)},
+            0 0 60px ${getRainbowColor(100)}
+        `;
 
         // Радужное свечение кнопок
         const buttons = document.querySelectorAll('.btn');
         buttons.forEach((btn,i)=>{
-            btn.style.boxShadow = `0 0 10px ${getRainbowColor(i*30)}, 0 0 20px ${getRainbowColor(i*60)}`;
+            btn.style.boxShadow = `0 0 15px ${getRainbowColor(i*30)}, 0 0 30px ${getRainbowColor(i*60)}`;
+        });
+
+        // Анимация мини-галереи (легкое парение)
+        const imgs = document.querySelectorAll('.mini-albums img');
+        imgs.forEach((img,i)=>{
+            const t = Date.now()/1000 + i;
+            img.style.transform = `translateY(${Math.sin(t)*5}px) rotate(${Math.sin(t/2)*3}deg) scale(1.05)`;
         });
 
         requestAnimationFrame(animate);
@@ -88,5 +134,3 @@
     </script>
 </body>
 </html>
-
-
